<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:orientation="vertical" >
	<TableLayout
		android:id="@+id/TableLayout01"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="30dp"
		android:shrinkColumns="2"
		android:stretchColumns="1" >
		<TableRow android:layout_marginBottom="20dp" >
			<TextView
				android:id="@+id/MonthPlan"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/MonthPlan"
				android:textColor="@color/white" />
			<EditText
				android:id="@+id/MonthPlanValue"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:background="@drawable/bg_edittext"
				android:ems="10"
				android:hint="@string/hint"
				android:inputType="number"
				android:paddingLeft="5dp"
				android:textColor="@color/white" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/unit"
				android:textColor="@color/white" />
		</TableRow>
		<TableRow android:layout_marginBottom="20dp" >
			<TextView
				android:id="@+id/UsedTraffic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/UsedTraffic"
				android:textColor="@color/white" />
			<EditText
				android:id="@+id/UsedTrafficValue"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:background="@drawable/bg_edittext"
				android:ems="10"
				android:hint="@string/hint"
				android:numeric="decimal"
				android:paddingLeft="5dp"
				android:textColor="@color/white" />
			<TextView
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/unit"
				android:textColor="@color/white" />
		</TableRow>
		<TableRow android:layout_marginBottom="20dp" >
			<TextView
				android:id="@+id/WarningLine"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/WarningLine"
				android:textColor="@color/white" />
			<SeekBar
				android:id="@+id/WarningLineSeekBar"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:max="100"
				android:maxHeight="5dip"
				android:minHeight="5dip"
				android:progressDrawable="@drawable/seekbar"
				android:thumb="@drawable/thumb_bar" />
			<TextView
				android:id="@+id/WarningLineValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/unit2"
				android:textColor="@color/white" />
		</TableRow>
		<TableRow android:layout_marginBottom="20dp" >
			<TextView
				android:id="@+id/PackagePlus"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/PackagePlus"
				android:textColor="@color/white" />
			<EditText
				android:id="@+id/PackagePlusValue"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:background="@drawable/bg_edittext"
				android:ems="10"
				android:hint="@string/hint"
				android:inputType="number"
				android:paddingLeft="5dp"
				android:textColor="@color/white" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/unit"
				android:textColor="@color/white" />
		</TableRow>
	</TableLayout>
	<ImageButton
		android:id="@+id/ImageButtonCommit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:background="@drawable/commit_selector" />
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<TextView
			android:id="@+id/AboutUs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:paddingBottom="20dp"
			android:paddingLeft="10dp"
			android:paddingRight="20dp"
			android:paddingTop="20dp"
			android:text="@string/AboutUs"
			android:textColor="@color/white" />
		<TextView
			android:id="@+id/WarningNote"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_toLeftOf="@+id/AboutUs"
			android:paddingBottom="20dp"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:paddingTop="20dp"
			android:text="@string/WarningNote"
			android:textColor="@color/white" />
	</RelativeLayout>
</LinearLayout>