<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:maskimage="http://schemas.android.com/apk/res/com.dreamteam.trafficmonitor"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	tools:context="${relativePackage}.${activityClass}" >
	<ImageButton
		android:id="@+id/setting"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:background="@android:color/transparent"
		android:scaleType="fitXY"
		android:src="@drawable/setting" />
	<TextView
		android:id="@+id/company"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="70dp"
		android:text="@string/company"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@color/white" />
	<com.dreamteam.trafficmonitor.customdialog.MaskImage
		android:id="@+id/imageView2"
		android:layout_width="175dp"
		android:layout_height="175dp"
		android:layout_below="@id/company"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dp"
		android:background="@drawable/round"
		maskimage:image="@drawable/water_normal"
		maskimage:mask="@drawable/water_cover"
		maskimage:usedPercentage="0.0" />
	<RelativeLayout
	    android:id="@+id/trafficTexts"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/imageView2"
		android:layout_marginTop="10dp" >
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:orientation="horizontal" >
			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:text="@string/UsedTraffic"
				android:textColor="@color/white" />
			<TextView
				android:id="@+id/usedTraffic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/init"
				android:textColor="@color/white" />
			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/unit"
				android:textColor="@color/white" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:gravity="right"
			android:orientation="horizontal" >
			<TextView
				android:id="@+id/textView3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/MonthPlan"
				android:textColor="@color/white" />
			<TextView
				android:id="@+id/traffic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/init"
				android:textColor="@color/white" />
			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dp"
				android:text="@string/unit"
				android:textColor="@color/white" />
		</LinearLayout>
	</RelativeLayout>
	<TextView
				android:id="@+id/suggestion"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="60dp"
				android:layout_below="@id/trafficTexts"
				android:text="@string/enoughTraffic"
				android:textColor="@color/white" />
</RelativeLayout>